--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vanilla Three.js</title>
+    <title>Pac-Man Game</title>
     <style>
+        *{
+            font-family: "Bungee Inline", sans-serif;
+        }
         body {
             margin: 0;
             overflow: hidden; /* Prevent scrollbars */
@@ -31,28 +37,35 @@
             margin: 5px 0;
             opacity: 0.8;
         }
-    </style>
+  </style>  
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@600&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Import THREE.js & Addons -->
+    <script type="importmap">
+        {
+          "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.155.0/examples/jsm/"
+          }
+        }
+    </script>
+    <script type="module" src="./main.js"></script>
 </head>
-<body>
+    <body>
     <div id="ui-overlay">
         <div id="score-container">
             <h2 style="color: yellow; font-size: 100px; padding: 10px 20px;"><span id="score">0</span></h2>
         </div>
-        <div id="death-message" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; display: none; justify-content: center; align-items: center; background-color: rgba(0, 0, 0, 0.8); z-index: 100;">
+        <div id="game-over" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); display: flex; align-items: center; width: 100vw; height: 100vh; display: none; justify-content: center; background-color: rgba(0, 0, 0, 0.8); z-index: 100; padding-top: 200px;">
             <div style="text-align: center; color: white;">
                 <h1>Game Over</h1>
                 <p style="font-size: 100px; font-weight: bold; color: yellow; opacity: 0.8; padding-bottom: 50px;"><span id="final-score">0</span></p>
-                <button id="respawn-button" style="padding: 10px 20px; font-size: 24px; border: none; background-color: #f00; color: white; cursor: pointer; border-radius: 5px; margin-top: 10px; font-family: 'Silkscreen', sans-serif;">
+                <button id="restart-button" style="padding: 10px 20px; font-size: 24px; border: none; background-color: #f00; color: white; cursor: pointer; border-radius: 5px; margin-top: 10px; font-family: 'Silkscreen', sans-serif;">
                     <p>Play Again</p>
                 </button>
             </div>
         </div>
     </div>
-    <!-- The canvas is auto-injected by Three.js -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
-    <script src="./game.js"></script>
-</body>
+  </body>  
 </html>
