Sounds are here

--- a/index.html
+++ b/index.html
@@ -67,5 +67,10 @@
             </div>
         </div>
     </div>
+     <!-- Audio Elements -->
+     <audio id="background-music" src="audio/background.mp3" loop></audio>
+     <audio id="pellet-sound" src="audio/pellet.mp3"></audio>
+     <audio id="power-pellet-sound" src="audio/powerPellet.mp3"></audio>
+     <audio id="ghost-sound" src="audio/ghost.mp3"></audio>
   </body>  
 </html>
